tooling/nargo_cli/tests/snapshots/execution_success/unsigned_to_signed_cast/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u64) {
    assert((x as i8) == -1);
    assert((x as i16) == -1);
    assert((x as i32) == -1);
    assert((x as i64) == -1);
}
